js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-gen-await-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
async
function
*
f
(
)
{
await
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
}
